src/entities/profile/ui/PostModal/PostModal.module.scss
.modal {
  width: 972px;
  height: 574px;
  z-index: 200;

  border: 1px solid var(--color-dark-100);
}

.innerModal {
  display: grid;
  grid-template-columns: 490px 480px;
  height: 100%;
}

.photoContainer {
  display: flex;
  align-items: center;

  position: relative;
  background: rgba(0, 0, 0, 0.59);
  min-height: 0;
}

.image {
  object-fit: contain;
  object-position: center;
}

.postSideBar {
  display: flex;
  flex-direction: column;
  min-height: 0;
  overflow: hidden;
  height: 100%;
}

.postHeader {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  padding: 0 24px;
}

.username {
  display: flex;
  align-items: center;
  gap: 8px;
  padding-top: 12px;
  padding-bottom: 12px;
}

/* Comments section */
.comments {
  display: flex;
  flex-direction: column;
  gap: 8px;
  flex: 1;
  min-height: 0;
  overflow-y: auto;

  padding-top: 20px;
  padding-left: 24px;
}

.comment {
  display: flex;
  gap: 8px;
}

.commentTimestamp {
  color: #8d9094;
  padding-bottom: 7px;
}

.commentLikeButton {
  align-items: flex-start;
  justify-content: flex-end;

  width: 16px;
  height: 16px;

  padding-top: 10px;
  margin-left: auto;
}


.footer {
  display: flex;
  flex-direction: column;
  //justify-content: space-between;

  padding: 12px 24px;

  min-height: 83px;
}

.likeSendSave {
  display: flex;
  align-items: center;
  gap: 24px;

  //padding-top: 12px;
  //padding-bottom: 12px;
  margin-bottom: 19px;
}

.likeSendSave > :last-child {
  margin-left: auto;
}

.postButton {
  align-items: flex-start;
  justify-content: flex-start;

  padding: 0;

  width: 24px;
  height: 24px;
  min-width: 0;
  min-height: 0;
}

/* Likes row */
.likesRow {
  display: flex;
  gap: 8px;

  //padding-top: 5px;
  margin-bottom: 5px;
}

.likesAvatars {
  display: flex;
}

.likeAvatar {
  width: 24px;
  height: 24px;
  flex-shrink: 0;
  border-radius: 50%;
}

.likeAvatar1 {
  background: #7f1414;
}

.likeAvatar2 {
  background: rgba(255, 255, 255, 0.77);
  margin-left: -8px;
  z-index: -1;
}

.likeAvatar3 {
  background: #0773e0;
  margin-left: -8px;
  z-index: -2;
}

.timestamp {
  color: #8d9094;
  padding-bottom: 7px;
}


.inputForm {
  display: flex;

  margin-bottom: 5px;
}

.separator {
  margin-bottom: 17px;
}

.input {
  border: none;
}

